app.css
/* Your styles should be mobile-first and responsive */

/** 
  * If you are unclear on how to utilize a mobile-first, responsive technique to write your CSS, here is an example: 
  *
  * https://github.com/andreacardybailey/responsive_example/blob/master/styles/responsive-base.css 
  *
*/
header {
  padding-bottom: 20px;
  padding-top: 100px;
  font-size: larger;
  color: #eeeeee;
  text-shadow:0px 0px 2px rgba(0, 0, 2px, 0.69);
}

body {
  background-image: url(images/congruent_outline.png);
  background-size: 250px;
  margin: auto;
  padding: 0 10px;
  text-align: center;
  max-width: 500px;
  font-family: 'Lato';
}

.form {
  background-color: #cecece;
  display: flex;
  flex-direction: column;
  border-radius:10px; 
  justify-content: center;
  color: #3d3d3d;
}

input {
  font-weight: 700;
  font-family: 'Lato', 'Arial Narrow', Arial, sans-serif;
  padding: 10px;
  margin: 10px;
  border-radius: 25px;
}

.answerSelected {
  pointer-events: none;
}

.answer{
  white-space: normal;
  border: none;
  color: #3d3d3d;
}

.next {
  align-self: flex-end;
  margin: 10px;
  border: none;
  border-radius: 25px;
  padding: 10px 50px;
}

.notVisible{
  visibility: hidden;
}

.selected {
  background-color: #17b978;
}

.incorrect {
  background-color: #c94e4e;
}

.start, .retry {
  font-size: larger;
  align-self: center;
  padding: 50px;
  margin: 100px;
  border-radius: 20px;
  border-width: 1px;
}

.notClickable {
  pointer-events: none;
}

.pBar {
  display: flex;
  flex-direction: row;
  background-image: url(images/congruent_outline.png);
  background-size: 150px;
  padding: 5px 25px;
  border-radius: 25px;
  color: white;
  margin: 0 30px 10px 30px;
  font-weight: bold;
}

.pBar > label {
  flex: 1;
  padding: 5px;
}

label.selected {
  color: #3d3d3d;
  background-color: #25abffc9;
  border-radius: 25px;
}

.pLabel {
  font-size: 24px;
  font-weight: bold;
  margin-top: 10px;
  padding-bottom: 5px;
}

.answer{
  white-space: normal;
}

@media all and (min-width: 850px){
  body {
    margin: 0 30%;
   
  }
}

